objects/Deal_Grading__c.object
<CustomObject>
    <fields>
        <fullName>What_is_the_form_factor_for_the_module__c</fullName>
        <label>&gt;What is the form factor for the module?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>What_is_GF_shipping_a_module_or_a_wafe__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pluggable</fullName>
                </value>
                <value>
                    <fullName>PCIE card</fullName>
                </value>
                <value>
                    <fullName>LGA socket</fullName>
                </value>
                <value>
                    <fullName>Solderable</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_modulation_scheme__c</fullName>
        <inlineHelpText>e.g.  PAM4, NRZ, QAM16</inlineHelpText>
        <label>&gt; What is the modulation scheme ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_system_topology__c</fullName>
        <inlineHelpText>e.g.  coherent, incoherent</inlineHelpText>
        <label>&gt; What is the system topology?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Which_IP_does_this_option_use__c</fullName>
        <label>Which IPs does this option use ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Plan</fullName>
                </value>
                <value>
                    <fullName>New or Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Opportunity1__r.Year__c</formula>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>configurations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>configurations</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Deal Grading</relationshipLabel>
        <relationshipName>Deal_Grading</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deal Grading</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity1__c</columns>
        <columns>Explanantion__c</columns>
        <columns>LTR_Estimated__c</columns>
        <columns>Estimated_NRE__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Result__c</columns>
        <columns>Deal_Grading_status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Sales_Contact_FSE__c</columns>
        <columns>FAE_Contact__c</columns>
        <columns>Brand_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deal_Grade_ASIC_PLM</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>FAE_Contact__c</columns>
        <columns>MD_Partname__c</columns>
        <columns>Deal_Grading_status__c</columns>
        <columns>Application_Usage__c</columns>
        <columns>Client__c</columns>
        <columns>Technology__c</columns>
        <columns>Target_Process_Node__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LTR_Estimated__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Line__c</field>
            <operation>equals</operation>
            <value>ASIC</value>
        </filters>
        <filters>
            <field>Client__c</field>
            <operation>notEqual</operation>
            <value>0016F00001eDU3I</value>
        </filters>
        <label>Deal Grade ASIC PLM</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deal_Grading_ASIC_Deal_Grading</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>FAE_Contact__c</columns>
        <columns>MD_Partname__c</columns>
        <columns>Deal_Grading_status__c</columns>
        <columns>Application_Usage__c</columns>
        <columns>Technology__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Target_Process_Node__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LTR_Estimated__c</columns>
        <columns>Client__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Line__c</field>
            <operation>equals</operation>
            <value>ASIC,SiPh</value>
        </filters>
        <filters>
            <field>Client__c</field>
            <operation>equals</operation>
            <value>0016F00001eDU3I</value>
        </filters>
        <label>DIW Training View</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deal_Grading_Admins_Deal_Grading</fullName>
        <filterScope>Queue</filterScope>
        <label>Deal Grading Admins</label>
        <queue>Deal_Grading_Admins</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deal_Grading_SiPh_Deal_Grading</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>GF_part_Name__c</columns>
        <columns>LTR_Estimated__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Deal_Grading_status__c</columns>
        <columns>FAE_Contact__c</columns>
        <columns>LTR_Rev__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Target_Process_Technology__c</columns>
        <columns>Client__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Line__c</field>
            <operation>equals</operation>
            <value>SiPh</value>
        </filters>
        <filters>
            <field>Client__c</field>
            <operation>notEqual</operation>
            <value>0016F00001eDU3I</value>
        </filters>
        <label>Deal Grading SiPh Product Line</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DG-{00000}</displayFormat>
        <label>Deal Grading Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Grading</pluralLabel>
    <recordTypes>
        <fullName>ASIC</fullName>
        <active>true</active>
        <description>This is the record type specifically for ASIC Business Unit</description>
        <label>ASIC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Combined</fullName>
        <active>true</active>
        <description>This is the record type specifically for both ASIC and Foundry Business Unit</description>
        <label>Combined</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foundry</fullName>
        <active>true</active>
        <description>This record type is for Foundry Business Unit</description>
        <label>Foundry</label>
    </recordTypes>
    <recordTypes>
        <fullName>SiPh</fullName>
        <active>true</active>
        <label>SiPh</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Edit_Access_for_DG_Admin</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
AND(ISNEW(), NOT(ISPICKVAL(Meeting_Status__c, &apos;&apos;)) ), 
AND(ISNEW(), NOT(ISPICKVAL(Result__c, &apos;&apos;)) ), 
ISCHANGED(Meeting_Status__c), ISCHANGED(Result__c) 
), 
NOT($Permission.Deal_Grading_Admin_Access),
NOT($Setup.IntegrationUsers__c.Is_Integration_User__c)
)</errorConditionFormula>
        <errorMessage>Only Deal Grading Admin can enter or edit &apos;Meeting Status&apos; and &apos;Result&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Approval_Comment</fullName>
        <active>true</active>
        <description>If DG status is ,No Bid&apos; then Approval comment is mandatory</description>
        <errorConditionFormula>AND(  ISPICKVAL(Deal_Grading_status__c,&quot;No Bid&quot;), ISBLANK(Deal_Grading_Approval__c )

)</errorConditionFormula>
        <errorMessage>&apos;Deal Grading Approval&apos; cannot be empty if &apos;Deal Grading Status&apos; is &quot;No Bid&quot;</errorMessage>
    </validationRules>
</CustomObject>